--- a/cours-symfony-esgi-4A-IW3/streemi/composer.json
+++ b/cours-symfony-esgi-4A-IW3/streemi/composer.json
@@ -1,15 +1,12 @@
 {
-    "name": "symfony/skeleton",
     "type": "project",
-    "license": "MIT",
-    "description": "A minimal Symfony project recommended to create bare bones applications",
+    "license": "proprietary",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.3.12",
+        "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
@@ -18,7 +15,7 @@
         "symfony/twig-bundle": "7.1.*",
         "symfony/yaml": "7.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
@@ -66,8 +63,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.1.*",
-            "docker": true
+            "require": "7.1.*"
         }
     }
 }
