--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
         "doctrine/orm": "^3.2",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.1.*",
+        "symfony/debug-bundle": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/yaml": "7.1.*",
@@ -76,6 +78,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
-        "symfony/maker-bundle": "^1.61"
+        "symfony/maker-bundle": "^1.61",
+        "symfony/web-profiler-bundle": "7.1.*"
     }
 }
