--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/framework-bundle": "7.1.*",
         "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "7.1.*",
+        "symfony/security-bundle": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/yaml": "7.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
